<resources>
    <string name="app_name">Task #1 Calculator</string>

    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_div">÷</string>
    <string name="btn_plus">+</string>
    <string name="btn_mull">×</string>
    <string name="btn_comma">.</string>
    <string name="btn_minus">−</string>
    <string name="btn_equal">=</string>
    <string name="btn_delete">␡</string>
    <string name="btn_clean">C</string>

    <string name="incorrect_input">Incorrect input</string>
</resources>
